fixing so hero image wont be above header on iphone

--- a/main.css
+++ b/main.css
@@ -539,7 +539,7 @@ footer > h3:hover > a::before {
   }
 
   article {
-    margin-top: 200px;
+    margin-top: 100px;
   }
 
   .image1 {
